--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sidebar Layout</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
@@ -71,12 +71,106 @@
                 <div class="greeting">Hello, John!</div>
             </div>
             <h1 class="heading">Your Subjects</h1>
-            <div class="image-gallery">
-                <img src="static/images/image1.png" alt="Image 1">
-                <img src="static/images/image2.png" alt="Image 2">
-                <img src="static/images/image3.png" alt="Image 3">
-                <img src="static/images/image4.png" alt="Image 4">
+            <div class="card-gallery-container">
+                <div class="card-gallery">
+                    <div class="card">
+                        <img src="../static/images/tamil.jpg" alt="tamil" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">Tamil</h2>
+                            <p class="card-date">Due: 12 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 75%;"></div>
+                                <span class="progress-percentage">Progress: <b>75%</b></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="../static/images/english.jpg" alt="english" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">English</h2>
+                            <p class="card-date">Due: 25 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 50%;"></div>
+                                <span class="progress-percentage">Progress: <b>50%</b></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="../static/images/maths.png" alt="maths" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">Mathematics</h2>
+                            <p class="card-date">Due: 02 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 30%;"></div>
+                                <span class="progress-percentage">Progress: <b>30%</b></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="../static/images/biology.jpeg" alt="biology" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">Biology</h2>
+                            <p class="card-date">Due: 15 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 65%;"></div>
+                                <span class="progress-percentage">Progress: <b>65%</b></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="../static/images/chemistry.png" alt="chemistry" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">Chemistry</h2>
+                            <p class="card-date">Due: 22 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 90%;"></div>
+                                <span class="progress-percentage">Progress: <b>90%</b></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="../static/images/physics.jpg" alt="physics" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">Physics</h2>
+                            <p class="card-date">Due: 31 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 77%;"></div>
+                                <span class="progress-percentage">Progress: <b>77%</b></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="../static/images/history.jpeg" alt="history" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">History</h2>
+                            <p class="card-date">Due: 07 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 20%;"></div>
+                                <span class="progress-percentage">Progress: <b>20%</b></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="../static/images/geography.jpg" alt="geography" class="card-img">
+                        <div class="card-info">
+                            <h2 class="card-title">Geography</h2>
+                            <p class="card-date">Due: 22 Oct 2024</p>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 33%;"></div>
+                                <span class="progress-percentage">Progress: <b>33%</b></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </main>
     </div>
     <script src="../JS/script.js">
