--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Sidebar Layout</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
@@ -71,6 +71,7 @@
                 <div class="greeting">Hello, John!</div>
             </div>
             <h1 class="heading">Your Subjects</h1>
+            
             <div class="card-gallery-container">
                 <div class="card-gallery">
                     <div class="card">
